[package]
name = "buceaNet"
version = "0.1.0"
authors = ["assasinXL <yyzyuming@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "0.2.21", features = ["macros"] }
rand = "0.7.3"
num = "0.1.42"
chrono = "0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
